--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.260.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
